immich/deployment-immich-machine-learning.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
    app.kubernetes.io/name: immich-machine-learning
    app.kubernetes.io/instance: immich-machine-learning
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/version: v2.6.3
    app.kubernetes.io/managed-by: argoCD
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
        app.kubernetes.io/name: immich-machine-learning
        app.kubernetes.io/part-of: immich
    spec:
      runtimeClassName: nvidia
      priorityClassName: homelab-essential
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        kubernetes.io/hostname: talos-d4h-k5m
      containers:
        - name: immich-machine-learning
          image: harbor.andreybondarenko.com/github/immich-app/immich-machine-learning:v3.2.4-cuda
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3003
          startupProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          volumeMounts:
            - name: cache
              mountPath: /cache
            - name: tmp
              mountPath: /tmp
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 50m
              memory: 2304Mi
            limits:
              memory: 6Gi
              nvidia.com/gpu: 1
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: immich-ml-cache-lh
        - name: tmp
          emptyDir: {}
