immich/deployment-immich-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich-server
    app.kubernetes.io/name: immich-server
    app.kubernetes.io/instance: immich-server
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/version: v2.6.3
    app.kubernetes.io/managed-by: argoCD
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
        app.kubernetes.io/name: immich-server
        app.kubernetes.io/part-of: immich
    spec:
      runtimeClassName: nvidia
      priorityClassName: homelab-essential
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        kubernetes.io/hostname: talos-d4h-k5m
      containers:
        - name: immich-server
          image: harbor.andreybondarenko.com/github/immich-app/immich-server:v3.3.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 2283
          startupProbe:
            httpGet:
              path: /api/server/ping
              port: http
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /api/server/ping
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/server/ping
              port: http
            periodSeconds: 10
          volumeMounts:
            - name: library
              mountPath: /data
            - name: stash-data
              mountPath: /external-libraries/stash-data
            - name: tmp
              mountPath: /tmp
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 100m
              memory: 3584Mi
            limits:
              memory: 5120Mi
              nvidia.com/gpu: 1
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: immich-library-hdd
        - name: stash-data
          hostPath:
            path: /var/mnt/storage/k8s/stash-data
            type: Directory
        - name: tmp
          emptyDir: {}
