immich/stateful-set-immich-postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-postgres
  namespace: immich
  labels:
    app: immich-postgres
    app.kubernetes.io/name: immich-postgres
    app.kubernetes.io/instance: immich-postgres
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/version: "16-vectorchord0.4.3-pgvectors0.2.0"
    app.kubernetes.io/managed-by: argoCD
spec:
  serviceName: immich-postgres
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
        app.kubernetes.io/name: immich-postgres
        app.kubernetes.io/part-of: immich
    spec:
      automountServiceAccountToken: false
      priorityClassName: homelab-essential
      enableServiceLinks: false
      securityContext:
        fsGroup: 999
        runAsUser: 999
        runAsGroup: 999
      containers:
        - name: postgres
          image: harbor.andreybondarenko.com/github/immich-app/postgres:16-vectorchord0.4.3-pgvectors0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: tcp-postgres
          readinessProbe:
            exec:
              command: ["pg_isready", "-h", "127.0.0.1", "-p", "5432", "-U", "postgres", "-d", "immich"]
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready", "-h", "127.0.0.1", "-p", "5432", "-U", "postgres", "-d", "immich"]
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 960Mi
            limits:
              memory: 1216Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-immich-postgres16-lh
