immich/stateful-set-immich-valkey.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-valkey
  namespace: immich
  labels:
    app: immich-valkey
    app.kubernetes.io/name: immich-valkey
    app.kubernetes.io/instance: immich-valkey
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/version: "9"
    app.kubernetes.io/managed-by: argoCD
spec:
  serviceName: immich-valkey
  replicas: 1
  selector:
    matchLabels:
      app: immich-valkey
  template:
    metadata:
      labels:
        app: immich-valkey
        app.kubernetes.io/name: immich-valkey
        app.kubernetes.io/part-of: immich
    spec:
      priorityClassName: homelab-essential
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: valkey
          image: harbor.andreybondarenko.com/dockerhub/valkey/valkey:9
          imagePullPolicy: IfNotPresent
          command:
            - valkey-server
          args:
            - --appendonly
            - "yes"
            - --save
            - "60"
            - "1"
          ports:
            - containerPort: 6379
              name: redis
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - valkey-cli ping | grep PONG
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - valkey-cli ping | grep PONG
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: data
              mountPath: /data
            - name: tmp
              mountPath: /tmp
          securityContext:
            runAsUser: 999
            runAsGroup: 999
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 40m
              memory: 64Mi
            limits:
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich-valkey-lh
        - name: tmp
          emptyDir: {}
