immich/service-immich-machine-learning.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
    app.kubernetes.io/name: immich-machine-learning
    app.kubernetes.io/instance: immich-machine-learning
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/managed-by: argoCD
spec:
  ports:
    - name: http
      port: 3003
      targetPort: http
  selector:
    app: immich-machine-learning
