immich/service-immich-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  namespace: immich
  labels:
    app: immich-postgres
    app.kubernetes.io/name: immich-postgres
    app.kubernetes.io/instance: immich-postgres
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/managed-by: argoCD
spec:
  ports:
    - name: tcp-postgres
      port: 5432
      targetPort: tcp-postgres
  selector:
    app: immich-postgres
