immich/service-immich-valkey.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
  namespace: immich
  labels:
    app: immich-valkey
    app.kubernetes.io/name: immich-valkey
    app.kubernetes.io/instance: immich-valkey
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/managed-by: argoCD
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app: immich-valkey
