immich/network-policy-immich-allow-ingress-from-traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-allow-ingress-from-traefik
  namespace: immich
spec:
  podSelector:
    matchLabels:
      app: immich-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 2283
