immich/network-policy-immich-default-deny.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-default-deny
  namespace: immich
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
