immich/network-policy-immich-postgres-restrict-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-postgres-restrict-ingress
  namespace: immich
spec:
  podSelector:
    matchLabels:
      app: immich-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: immich
          podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - immich-server
                  - immich-machine-learning
      ports:
        - protocol: TCP
          port: 5432
